deployments/jenkins/dind.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dind
  labels:
    app: dind
spec:
  selector:
    matchLabels:
      app: dind
  template:
    metadata:
      labels:
        app: dind
    spec:
      containers:
        - name: dind
          image: docker:dind
          securityContext:
            privileged: true
          command: ["dockerd"]
          args: ["--host=unix:///var/run/docker.sock", "--host=tcp://0.0.0.0:2375"]
          volumeMounts:
            - name: dind-storage
              mountPath: /var/lib/docker
          ports:
            - containerPort: 2375
      volumes:
        - name: dind-storage
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: dind
  labels:
    app: dind
spec:
  type: ClusterIP
  ports:
    - port: 2375
      targetPort: 2375
      protocol: TCP
  selector:
    app: dind
---
