deployments/jenkins/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
spec:
  rules:
  - host: ci.35.246.75.225.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-operator-http-jenkins
          servicePort: 8080
